--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ics",
   "version": "2.10.0",
   "description": "iCal (ics) file generator",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "start": "mocha --compilers js:babel-core/register --watch --recursive",
     "test": "mocha --compilers js:babel-core/register --recursive",
@@ -28,24 +28,17 @@
   "bugs": {
     "url": "https://github.com/adamgibbons/ics/issues"
   },
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
-  },
   "homepage": "https://github.com/adamgibbons/ics",
   "devDependencies": {
-    "babel-preset-env": "^1.6.0",
-    "chai": "^4.1.1",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "mocha": "^3.5.0"
+    "@types/lodash": "^4.14.118",
+    "babel-core": "^6.26.3",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.1.6"
   },
   "dependencies": {
-    "joi": "^14.0.1",
-    "lodash": "^4.17.4",
-    "moment": "^2.18.1",
-    "uuid": "^3.1.0"
+    "lodash": "^4.17.11"
   },
   "files": [
     "dist/"
